welcome.lessons.welcome.variables.Variables.scala.error
Variables:3: error: '=' expected but ';' found.
while(!estSurBiscuit){avance();npBas=npBas+1;}
^Variables:6: error: '=' expected but ';' found.
while(dejaFait=/=npBas){recule();}
^